# OOP

./: README.md
Chess/: CMakeLists.txt  bishop.c  bishop.h  diagonal_and_straight_checks.c  diagonal_and_straight_checks.h  figs.txt  figure.c  figure.h  figure_list_funcs.c  figure_list_funcs.h  king.c  king.h  knight.c  knight.h  main.c  new.c  new.h  queen.c  queen.h  read_file.c  read_file.h  rook.c  rook.h
DoubleLinkedList/: CMakeLists.txt  dlist.c  dlist.h  main.c
Hot_Keys/: CMakeLists.txt
Hot_Keys/main/: CMakeLists.txt  first_list.txt  main.cpp  second_list.txt  writer.cpp  writer.hpp
Hot_Keys/src/: CMakeLists.txt  command.cpp  command.hpp  command_hash.hpp  conflicts.hpp  exceptions.hpp  hot_key.cpp  hot_key.hpp  hot_key_hash.hpp  hot_keys_map.cpp  hot_keys_map.hpp  key_command_combination.hpp  parser.cpp  parser.hpp  string_to_lowercase.hpp
Hot_Keys/tests/: CMakeLists.txt  command_tests.cpp  hot_key_map_tests.cpp  hot_key_tests.cpp  key_command_combination_tests.cpp  parser_tests.cpp
Matrix/: CMakeLists.txt  Empty_Matrix_Tests.cpp  Matrix.cpp  Matrix.hpp  Matrix_Tests.cpp  Single_Element_Tests.cpp  Static_Members_Tests.cpp  Vector_Tests.cpp
Wave_Algorithm/: CMakeLists.txt
Wave_Algorithm/src/: CMakeLists.txt  cell_position.hpp  cell_type.hpp  cell_types_convertor.hpp  cells_table.cpp  cells_table.hpp  exceptions.hpp  main.cpp  maze.cpp  maze.hpp  parser.cpp  parser.hpp  path.hpp  path_finder.cpp  path_finder.hpp  start_finish_to_empty_space_convertor.cpp  start_finish_to_empty_space_convertor.hpp  start_finish_to_wall_convertor.cpp  start_finish_to_wall_convertor.hpp  test.txt
Wave_Algorithm/tests/: CMakeLists.txt  cell_position_tests.cpp  cell_types_convertor_tests.cpp  cells_table_tests.cpp  main.cpp  maze_tests.cpp  parser_test.cpp  path_finder_tests.cpp
